--- a/easy-npc-kracked-ai/build.gradle
+++ b/easy-npc-kracked-ai/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     // BCrypt Password Hashing
     implementation('at.favre.lib:bcrypt:0.10.2')
     include('at.favre.lib:bcrypt:0.10.2')
+    implementation('at.favre.lib:bytes:1.5.0')
+    include('at.favre.lib:bytes:1.5.0')
 
     // JWT
     implementation('com.auth0:java-jwt:4.4.0')
