--- a/easy-npc-kracked-ai/build.gradle
+++ b/easy-npc-kracked-ai/build.gradle
@@ -52,8 +52,13 @@ dependencies {
     implementation('com.openai:openai-java:0.27.0')
     include('com.openai:openai-java:0.27.0')
 
+    // OkHttp and Okio (explicitly include Okio as transitive dependencies may not be bundled)
     implementation('com.squareup.okhttp3:okhttp:4.12.0')
     include('com.squareup.okhttp3:okhttp:4.12.0')
+    implementation('com.squareup.okio:okio:3.9.0')
+    include('com.squareup.okio:okio:3.9.0')
+    implementation('com.squareup.okio:okio-jvm:3.9.0')
+    include('com.squareup.okio:okio-jvm:3.9.0')
 
     // Anthropic SDK - Temporarily disabled (will use HTTP API directly)
     // implementation('com.anthropic:anthropic-java:0.28.0')
